# XPlaneConnect

./: .gitignore
Cpp/: CMakeLists.txt  CPPLINT.cfg
Cpp/include/xplane-connect-cpp/: xplane_connect.h  xplane_exceptions.h
Cpp/src/: helper.h  xplane_connect.cpp
